# abusive-seller-detection

./: .env.example  .gitignore  README.md  analyze_results.py  app.py  compare_sentiment.py  create_analyze_dashboard.py  create_dashboard.py  pyproject.toml  train_model.py
CSV/product/: products_rows.csv
CSV/sellers/: seller_address.csv  sellers_final.csv  sellers_ml_ready.csv  sellers_rows.csv
docs/: 3_data_preprocessing.md  4_model_training.md  5_model_evaluation.md  6_hyperparameter_tuning.md  data_collection.md  eda_interpretation.md  presentation_script.md  problem_definition.md  schemas.md
notebooks/: 00_supabase_guide.ipynb  01_data_exploration.ipynb  02_abusing_detection_model.ipynb  02_data_preprocessing.ipynb  03_feature_engineering.ipynb  03_model_improvement.ipynb  04-1_model_training_no_satisfaction.ipynb  04_abusing_detection_model.ipynb  04_data_load_check.ipynb  04_model_training.ipynb  05_model_improvement.ipynb  05_text_preprocessing_test.ipynb  06_error_analysis.ipynb  06_review_feature_exploration.ipynb  06_risk_cost_simulation.ipynb  07_question_feature_exploration.ipynb  08_sentiment_analysis_test.ipynb  10_risk_cost_simulation.ipynb  analyze_results.html  analyze_results.ipynb  eda_seller_features.ipynb  feature_selection.ipynb  interactive_analysis.ipynb  model_train.ipynb  result_analysis.ipynb  판매자_데이터전처리.ipynb  판매자_피쳐_엔지니어링.ipynb
output/: feature_comparison.csv  feature_importance.csv  lightgbm_model.txt  overall_statistics.csv  overall_stats.csv  prediction_results.csv  seller_features.csv  seller_features_keyword.csv  seller_features_real_sentiment.csv
scripts/: upload_model_to_hf.py
src/: aggregate_seller.py  config.py  data_loader.py  eda.py  feature_question.py  feature_review.py  label.py  main.py  model.py  pipeline.py  preprocess.py  sentiment_analysis.py
src/utils/: __init__.py  (+2 more)
(+15 files in other folders)
