[project]
name = "abusive-seller-detection"
version = "0.1.0"
description = "악성 판매자 탐지 머신러닝 프로젝트"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "notebook>=7.5.3",
    "pandas>=2.0.0,<3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "streamlit>=1.45.0",
    "supabase>=2.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
abusive-seller-detection = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "abusive-seller-detection",
]
