[project]
name = "abusive-seller-detection"
version = "0.1.0"
description = "악성 판매자 탐지 머신러닝 프로젝트"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "protobuf>=6.33.4",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "shap>=0.49.1",
    "supabase>=2.27.2",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "xgboost>=3.1.3",
]
